# AI_Study_assistant

./: .env.example  Dockerfile  README.md  agent.py  api.py  config.py  debug_agent.py  docker-compose.yml  document_processor.py  llm_chains.py  main.py  mlflow_tracker.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_app.ps1  tracing.py  ui.py  verify_env.py  web_serach.py
backend/: debug_agent.py  main.py  main_assistant.py  ui.py  verify_api.py  verify_graceful.py
backend/app/agent/: agent.py  llm_chains.py
backend/app/api/: api.py
backend/app/core/: models.py  tracing.py
backend/app/services/: document_processor.py  web_search.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Quiz.tsx  Summary.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  SourceItem.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
